--- a/RPi Cloud/login.html
+++ b/RPi Cloud/login.html
@@ -2,22 +2,47 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Log In Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PiVault Login</title>
+
+    <!--Font: Montserrat-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <!--Material Icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <h1>Admin Login Page</h1>
-    <form action="" method="post">
-        <label for="username">Username</label>
-        <br>
-        <input type="text" name="username" id="username">
-        <br>
-        <label for="password">Password</label>
-        <br>
-        <input type="password" name="password" id="password">
-        <br>
-        <input type="submit" name="login" value="LOGIN">
-    </form>
+    <div class="login-page-container">
+        <div class="login-container">
+        <span class="material-icons-outlined">cloud</span>
+            <h1>PiVault Login</h1>
+            <form action="" method="post">
+                <div class="username-password-container">
+                    <div class="username-password">
+                        <span class="material-icons-outlined">person</span>
+                        <input type="text" class="input" name="username" id="username" placeholder="Username">
+                    </div>
+                    <br>
+                    <div class="username-password">
+                        <span class="material-icons-outlined">lock</span>
+                        <input type="text" class="input" name="password" id="password" placeholder="Password">
+                    </div>
+                </div>
+                <br>
+                <div class="button-forgot">
+                    <button type="submit" id="button">Login</button>
+                    <p><a href="#">Forgot Password?</a></p>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
