CSS updates to the login page

--- a/RPi Cloud/login.html
+++ b/RPi Cloud/login.html
@@ -17,12 +17,13 @@
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="css/index.css">
+    
 </head>
 
-<body>
+<body class="login">
     <div class="login-page-container">
         <div class="login-container">
-        <span class="material-icons-outlined">cloud</span>
+        <span class="material-icons-outlined" id="cloud-icon">cloud</span>
             <h1>PiVault Login</h1>
             <form action="" method="post">
                 <div class="username-password-container">
