added logout button. This takes you to the login.html. Need to adjust he layout of the button

--- a/RPi Cloud/index.html
+++ b/RPi Cloud/index.html
@@ -30,6 +30,11 @@
             <div class="header-title">
                 <h1>PiVault</h1>
             </div>
+            <div class="logout-button">
+                <a href="login.html" style="color: inherit; text-decoration: none">  <!-- adjust logout button next to the search bar -->
+                <span class="material-icons-outlined">logout</span>
+                </a>
+            </div>
             <div class="search" id="search">
                 <span class="material-icons-outlined">search</span>
                 <input class="search-input" type="search" placeholder="Search">
